<?xml version="1.0" encoding="utf-8"?>

<androidx.drawerlayout.widget.DrawerLayout
    android:id="@+id/homeDrawerLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background"
    tools:context=".activties.AddExpenseActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        >
        <include
            android:id="@+id/expensesHeaderLayout"
            layout="@layout/header_bar"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" />

        <TextView
            android:id="@+id/welcomeTextfield"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/italiana"
            android:paddingTop="5dp"
            android:text="@string/expense_details"
            android:gravity="center_horizontal"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/darkBlue"
            android:textSize="30sp"
            android:textStyle="bold" />

    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="8">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:orientation="vertical"
                >

                <EditText
                    android:id="@+id/expenseInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:paddingStart="20dp"
                    android:autofillHints="User Name"
                    android:background="@drawable/text_box"
                    android:hint="@string/enterExpense"
                    android:inputType="text"
                    android:textColor="@color/black"
                    android:textColorHint="#515151"
                    android:textColorLink="@color/lightBlue"
                    />
                <EditText
                    android:id="@+id/noteExpense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:paddingStart="20dp"
                    android:autofillHints="User Name"
                    android:background="@drawable/text_box"
                    android:hint="Note/Title"
                    android:inputType="text"
                    android:textColor="@color/black"
                    android:textColorHint="#515151"
                    android:textColorLink="@color/lightBlue"

                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/italiana"
                    android:paddingTop="30dp"
                    android:text="Categories"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/darkBlue"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="40dp"
                    android:id="@+id/radioGroup"

                    >

                    <RadioButton android:id="@+id/foodRadio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/food"
                        />
                    <RadioButton android:id="@+id/schoolRadio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/school"
                        />
                    <RadioButton android:id="@+id/clothesRadio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/clothes"
                        />
                    <RadioButton android:id="@+id/goOutRadio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/goOut"
                        />
                    <RadioButton
                        android:id="@+id/transportRadio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/transport"
                        />
                    <RadioButton
                        android:id="@+id/others"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/other"
                        />
                </RadioGroup>


            </LinearLayout>

            <Button
                android:id="@+id/saveBtn"
                android:layout_marginBottom="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:background="@drawable/btn_shape"
                android:shadowColor="@color/lightBlue"
                android:text="@string/save"
                android:textColor="@color/white" />

        </LinearLayout>


    </ScrollView>
</LinearLayout>

    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/expenseNav"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:menu="@menu/menu"
        android:backgroundTint="@color/darkBlue"
        android:alpha="0.9"
        android:layout_gravity="start"
        android:paddingTop="40dp"
        android:paddingLeft="30dp"/>

    </androidx.drawerlayout.widget.DrawerLayout>


