<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background"
    tools:context=".activties.LoginActivity"
    android:orientation="vertical"
    >

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/italiana"
            android:paddingTop="30dp"
            android:text="Budget In"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/darkBlue"
            android:textSize="55sp"
            android:textStyle="bold" />


    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="8"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:paddingTop="20dp"
            android:layout_marginRight="30dp"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/userName"
                android:fontFamily="sans-serif-black"
                android:textColor="@color/black"
                android:layout_marginTop="30dp"
                />

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingStart="20dp"
                android:autofillHints="User Name"
                android:background="@drawable/text_box"
                android:hint="@string/userNameHint"
                android:inputType="text"
                android:textColor="@color/black"
                android:textColorHint="#515151"
                android:textColorLink="@color/lightBlue"

                />

            <TextView
                android:layout_marginTop="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:fontFamily="sans-serif-black"
                android:textColor="@color/black"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:id="@+id/registerPasswordTextLayout"
                android:gravity="center"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/darkBlue"
                app:hintEnabled="false"
                app:boxBackgroundMode="none">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="20dp"
                    android:autofillHints="Password"
                    android:hint="@string/passwordHint"
                    android:inputType="textPassword"
                    android:background="@drawable/text_box"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    />
            </com.google.android.material.textfield.TextInputLayout>


            <CheckBox
                android:id="@+id/remember"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/black"
                android:backgroundTintMode="multiply"
                android:shadowColor="#131212"
                android:text="@string/remember"
                android:textColor="@color/black"
                android:textColorHint="#515151"
                android:textSize="18sp" />

            <Button
                android:id="@+id/loginBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:background="@drawable/btn_shape"
                android:shadowColor="@color/lightBlue"
                android:text="@string/signIn"
                android:textColor="@color/white" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="20dp"
                    android:fontFamily="sans-serif-black"
                    android:text="Don't have an account yet? "
                    android:textColor="@color/black" />
                <TextView
                    android:id="@+id/regLink"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="20dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/sign_up"
                    android:textColor="@color/lightBlue" />
            </LinearLayout>



        </LinearLayout>
    </ScrollView>
</LinearLayout>

