<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background"
    tools:context=".activties.RegisterActivity"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="30dp"
            android:text="Budget In"
            android:fontFamily="@font/italiana"
            android:textColor="@color/darkBlue"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="60sp"
            android:textStyle="bold" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="8">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:orientation="vertical"
            >

            <TextView
                android:layout_marginTop="50dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:clickable="true"
                android:focusable="true"
                android:textSize="16sp"
                android:text="@string/name"
                android:layout_marginStart="30dp"
                android:fontFamily="sans-serif-black"
                android:textColor="@color/black" />


            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/text_box"
                android:hint="@string/name"
                android:inputType="text"
                android:textColorHint="@color/black"/>

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:clickable="true"
                android:focusable="true"
                android:textSize="16sp"
                android:text="@string/userName"
                android:layout_marginStart="30dp"
                android:fontFamily="sans-serif-black"
                android:textColor="@color/black" />
            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingStart="20dp"
                android:hint="@string/userName"
                android:inputType="text"
                android:background="@drawable/text_box"
                android:textColor="@color/black"
                android:textColorHint="@color/black"/>

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:clickable="true"
                android:focusable="true"
                android:textSize="16sp"
                android:text="@string/monthly_income"
                android:layout_marginStart="30dp"
                android:fontFamily="sans-serif-black"
                android:textColor="@color/black" />


            <EditText
                android:id="@+id/income"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/text_box"
                android:hint="@string/income"
                android:inputType="number"
                android:textColorHint="@color/black"/>

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:clickable="true"
                android:focusable="true"
                android:textSize="16sp"
                android:text="@string/email"
                android:layout_marginLeft="30dp"
                android:fontFamily="sans-serif-black"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingStart="20dp"
                android:autofillHints="E-Mail"
                android:hint="@string/email"
                android:background="@drawable/text_box"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:textColorHint="@color/black"/>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="10dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/password"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/registerPasswordTextLayout"
                    android:gravity="center"
                    android:layout_marginTop="40dp"
                    app:endIconMode="password_toggle"
                    app:endIconTint="@color/darkBlue"
                    app:hintEnabled="false"
                    app:boxBackgroundMode="none">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:autofillHints="Password"
                        android:background="@drawable/text_box"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_marginTop="105dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:clickable="true"
                    android:focusable="true"
                    android:textSize="16sp"
                    android:text="@string/conPsd"
                    android:layout_marginStart="30dp"
                    android:fontFamily="sans-serif-black"
                    android:textColor="@color/black" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/registerCPasswordTextLayout"
                    android:gravity="center"
                    android:layout_marginTop="40dp"
                    app:endIconMode="password_toggle"
                    app:endIconTint="@color/darkBlue"
                    android:background="@drawable/text_box"
                    app:hintEnabled="false"
                    app:boxBackgroundMode="none"
                    android:layout_below="@+id/registerPasswordTextLayout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/conPsd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:autofillHints="Confirm Password"
                        android:backgroundTint="@color/black"
                        android:hint="@string/conPsd"
                        android:inputType="textPassword"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"

                        />
                </com.google.android.material.textfield.TextInputLayout>

            </RelativeLayout>

            <Button
                android:id="@+id/signup"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:background="@drawable/btn_shape"
                android:text="@string/signUp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="20dp"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/already_have_an_account"
                    android:textColor="@color/black" />
                <TextView
                    android:id="@+id/logLink"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="20dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/sign_in"
                    android:textColor="@color/lightBlue" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</LinearLayout>
